minor performance fix
git-svn-id: https://wala.svn.sourceforge.net/svnroot/wala/trunk@3004 f5eafffb-2e1d-0410-98e4-8ec43c5233c4